tests/ui/impl-trait/two_tait_defining_each_other2.next.stderr
error[E0284]: type annotations needed: cannot satisfy `A == B`
  --> $DIR/two_tait_defining_each_other2.rs:11:5
   |
LL |     x // B's hidden type is A (opaquely)
   |     ^ cannot satisfy `A == B`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
